436 complete 427 needs more rev docs
more 427 rev docs

--- a/427/427_2.html
+++ b/427/427_2.html
@@ -48,28 +48,171 @@
                 
                 <h1>Topic: "UV Damage, Eyes" </h1>
                 <div>
-                    <h2> Chinese Surgeon Draws "Road Map" For the Brain </h2>
+                    <h2> ROLL  OF THE 'DYESS  
+                            SUNS MAY LOSE BET THEY COULD KEEP STAR  </h2>
 
-<P>
-HARBIN, November 21 (Xinhua) -- The workings of the human brain
-remains a mystery. The brain is often described as a "virgin
-forest" because of its complexity.
-</P>
-<P>
-A "road map" for the brain devised by a Chinese surgeon will
-serve as a guide for doctors performing cerebral operations. Brain
-surgeons often use an endoscope with a micro-video camera or other
-medical instruments to help explore the human brain during
-operations.
-</P>
-<P>
-Doctor Han Zhanqiang works at the No.1 Hospital Attached to
-Harbin Medical Sciences University in the northeast province of
-Heilongjiang. The slender, tubular optical instrument can enter
-the brain via "three routes". These "three routes" have been
-carefully marked by Dr. Han to guide other doctors when examining
-the brain. 
-</P>
+                            <P>
+                                    With the start of training camp looming early next week, the
+                                 Suns and many of the NBA's other 28 teams can do nothing but wait
+                                 patiently while Phoenix free agent star Antonio McDyess makes up
+                                 his mind.
+                                 </P>
+                                 <P>
+                                    It appears that McDyess will decide between the Suns and his old
+                                 club, the Denver Nuggets. The Nuggets might have the edge, even
+                                 though the Suns can pay more.
+                                 </P>
+                                 <P>
+                                    The Houston Rockets still are interested but apparently are
+                                 zeroing in on Chicago Bulls free agent Scottie Pippen. Orlando
+                                 apparently has tried to enter the McDyess sweepstakes, and Chicago
+                                 Bulls General Manager Jerry Krause is making a strong drive for
+                                 him.
+                                 </P>
+                                 <P>
+                                    McDyess, Pippen and Minnesota free agent Tom Gugliotta are the
+                                 most attractive players on the market, and until their decisions
+                                 are made, very little else can fall into place.
+                                 </P>
+                                 <P>
+                                    The Suns have not given McDyess any kind of deadline, said one
+                                 of McDyess' agents, James Bryant.
+                                 </P>
+                                 <P>
+                                    ``I think everyone wants to know what's going on as soon as
+                                 possible,'' Bryant said. ``But there haven't been any demands. We
+                                 don't know when Antonio is going to make a decision. We feel like
+                                 it's all starting to crystallize. I'd expect one pretty soon.''
+                                 </P>
+                                 <P>
+                                    The NBA deal is expected to be finalized Monday or Tuesday,
+                                 which will bring a wave of free agent signings.
+                                 </P>
+                                 <P>
+                                    The Suns would like an answer as quickly as possible, Bryant
+                                 said, to determine where they go next if McDyess leaves. And those
+                                 options may be drying up.
+                                 </P>
+                                 <P>
+                                    League sources said Thursday that Gugliotta has come to terms
+                                 with the Timberwolves. Minnesota still could sign him and make a
+                                 trade, but either way, the Suns apparently are out of the picture.
+                                 </P>
+                                 <P>
+                                    So where do they go if Gugliotta is off the board and McDyess is
+                                 holding a news conference in Denver?
+                                 </P>
+                                 <P>
+                                    Because of the new collective bargaining rules, few options
+                                 remain. League sources said that Chicago center Luc Longley is
+                                 ready to make a deal with Phoenix.
+                                 </P>
+                                 <P>
+                                    The Suns probably would make an offer to their own free agent
+                                 forward, Clifford Robinson, who has had an offer from the Detroit
+                                 Pistons.
+                                 </P>
+                                 <P>
+                                    Then the Suns still could go after another, less expensive free
+                                 agent such as Miami's Brent Barry, whom the club wanted to draft in
+                                 1995.
+                                 </P>
+                                 <P>
+                                    Sign-and-trade scenarios are possible, but most teams probably
+                                 would want the Suns' first-round draft pick obtained from Dallas
+                                 last summer in the trade that sent Steve Nash to the Mavericks. The
+                                 Suns might be better off holding on to that chip.
+                                 </P>
+                                 <P>
+                                    The Suns gambled in October 1997 when they traded guard Wesley
+                                 Person, forward Tony Dumas and four draft picks _ two first- and
+                                 two second-round selections _ in a three-team deal with Cleveland
+                                 and Denver, to get the 6-foot-10, 220-pound McDyess.
+                                 </P>
+                                 <P>
+                                    The risk was that the club might not be able to re-sign McDyess
+                                 when he became a free agent at the end of the season.
+                                 </P>
+                                 <P>
+                                    Why would McDyess consider the Nuggets, a team that won 11 games
+                                 last season?
+                                 </P>
+                                 <P>
+                                    First, the Nuggets fired General Manager Allan Bristow, who
+                                 traded McDyess and said he wasn't worth a $100 million contract.
+                                 McDyess said last season that he would not consider playing in
+                                 Denver again if Bristow were there. He was replaced by Dan Issel,
+                                 whom McDyess likes.
+                                 </P>
+                                 <P>
+                                    Second, the Nuggets traded for Nick Van Exel. McDyess and Van
+                                 Exel have become friends, and there is speculation that he will
+                                 agree to go to Denver if the Nuggets give Van Exel a new deal next
+                                 summer when his contract is up. By the way, they have the same
+                                 agents.
+                                 </P>
+                                 <P>
+                                    Third, McDyess is a small-town guy who still feels connected
+                                 with some of his friends in Denver and would feel comfortable with
+                                 Van Exel around. His two closest friends with the Suns were Nash,
+                                 who was traded, and John ``Hot Rod'' Williams, who won't be
+                                 re-signed.
+                                 </P>
+                                 <P>
+                                    Finally, it's possible McDyess never wanted to leave the Nuggets
+                                 in the first place. He fired his last agent, Arn Tellem, and hired
+                                 Bryant and Tony Dutt, reportedly because Tellem forced a trade from
+                                 Denver by demanding a $100 million contract from the Nuggets.
+                                 Tellem apparently didn't tell McDyess what the Nuggets had on the
+                                 table.
+                                 </P>
+                                 <P>
+                                    Bryant said McDyess likes the Phoenix organization, Coach Danny
+                                 Ainge and his teammates with the Suns, who apparently have been
+                                 letting him know they want him back.
+                                 </P>
+                                 <P>
+                                    ``It's just a different situation with these new rules,'' Bryant
+                                 said. ``It's almost like choosing a college now. The money is about
+                                 the same wherever he goes. You have to consider a lot more factors,
+                                 like the style of play, the makeup of the team, how you fit into
+                                 the plan, how competitive the team has a chance to be. There is a
+                                 lot to consider.''
+                                 </P>
+                                 <P>
+                                    McDyess could not be reached for comment. A friend who is
+                                 screening calls made to McDyess' home and cellular numbers said
+                                 McDyess will not speak with reporters until he has made his
+                                 decision.
+                                 </P>
+                                 <P>
+                                    If the Suns renounce the rights to McDyess, they will be about
+                                 $10.7 million below the salary cap if they keep their five contract
+                                 players and do not renounce Robinson, Rex Chapman and Marko Milic.
+                                 </P>
+                                 <P>
+                                    Robinson reportedly has been offered a contract by the Detroit
+                                 Pistons, but if McDyess leaves, the Suns likely would offer him
+                                 some of their available cap space to keep him in Phoenix.
+                                 </P>
+                                 <P>
+                                    Still, McDyess would be a huge loss.
+                                 </P>
+                                 <P>
+                                    McDyess was arguably the Suns' best player over the last month
+                                 of the 1997-98 season and during a first-round playoff loss to the
+                                 San Antonio Spurs.
+                                 </P>
+                                 <P>
+                                    During April, in which the Suns were 8-1, he averaged 19.3
+                                 points, 7.1 rebounds, 2.1 blocked shots and 1.89 steals, and shot
+                                 62.2 percent.
+                                 </P>
+                                 <P>
+                                    For the season, he averaged 15.1 points and 7.6 rebounds and
+                                 joined Alvan Adams and Garfield Heard as the only Suns to have at
+                                 least 100 blocked shots and 100 steals in a season. &QL;
+                                 </P>
                 </div>
                 
                 <button type="button" class="btn btn-primary" onclick="relevant();draw();screenshot2();redirect('427_3.html');">Relevant</button>
