--- a/427/427_7.html
+++ b/427/427_7.html
@@ -44,7 +44,7 @@
                 
                 <h1>Topic: "UV Damage, Eyes" </h1>
                 <div>
-                    <h2> Electric Fields, Cancer Link Nixed </h2>
+                    <h2> AVOIDING BURNS, BITES AND OTHER SUMMER HAZARDS </h2>
                     <P>
                         WASHINGTON (AP) -- Six years of research have produced little  
                     hard evidence that the magnetic fields around electric power lines 
