--- a/436/436_10.html
+++ b/436/436_10.html
@@ -44,75 +44,79 @@
                 
                 <h1>Topic: "Railway Accidents" </h1>
                 <div>
-                    <h2> Electric Fields, Cancer Link Nixed </h2>
+                    <h2> New S.F. Cable Car Introduced  </h2>
                     <P>
-                        WASHINGTON (AP) -- Six years of research have produced little  
-                    hard evidence that the magnetic fields around electric power lines 
-                    cause cancer, yet some lingering concerns remain, a National 
-                    Institutes of Health division reported Tuesday. 
-                    </P>
-                    <P>
-                        ``Virtually all of the laboratory evidence in animals and humans  
-                    and most of the mechanistic studies in cells fail to support a 
-                    causal relationship'' between the electromagnetic fields and 
-                    cancer, the National Institute of Environmental Health Sciences 
-                    said in the report to Congress. 
-                    </P>
-                    <P>
-                        However, it said there have been some statistical associations  
-                    between the fields and childhood leukemia as well as chronic 
-                    lymphocytic leukemia in adults exposed to the fields through their 
-                    work, such as electric utility workers, machinists and welders. 
-                    </P>
-                    <P>
-                        Research is continuing on these ``lingering concerns'' and  
-                    efforts to reduce human exposure to electromagnetic fields should 
-                    continue, the report said. 
-                    </P>
-                    <P>
-                        ``The lack of consistent, positive findings in animal or  
-                    mechanistic studies weakens the belief that this association is 
-                    actually due to EMF, but it cannot completely discount the 
-                    epidemiological findings,'' NIEHS Director Kenneth Olden said in a 
-                    statement. 
-                    </P>
-                    <P>
-                        Therefore, he said, since virtually everyone in the country is  
-                    routinely exposed to EMF, efforts to reduce such exposure should 
-                    continue. 
-                    </P>
-                    <P>
-                        For example, the electrical industry should continue efforts to  
-                    reduce the electromagnetic fields around large transmission lines 
-                    and communities should enforce electrical codes to avoid wiring 
-                    errors that can increase EMF. 
-                    </P>
-                    <P>
-                        The focus on a possible link to cancer stemmed from a 1979  
-                    Denver study that tied leukemia to EMF, but the researchers also 
-                    concluded that there was no connection between EMF and other 
-                    problems including Alzheimer's disease, depression and birth 
-                    defects. 
-                    </P>
-                    <P>
-                        Just a year ago, a panel of scientists studying this issue  
-                    concluded, in a 19-9 vote, that electromagnetic fields should be 
-                    considered ``possible human carcinogens'' though the risk was 
-                    ``probably quite small.'' 
-                    </P>
-                    <P>
-                        That was at odds with a 1996 report by a National Research  
-                    Council panel of scientists.Those scientists evaluated about 500 
-                    studies on the health effects of high voltage power lines and found 
-                    ``no conclusive and consistent evidence'' that electric and 
-                    magnetic fields cause any human disease. 
-                    </P>
-                    <P>
-                        Though the link between electricity and disease has long been  
-                    controversial, some consumer groups have sued power companies or 
-                    forced utility firms to move power lines or install shielding. 
-
-                    </P>
+                            SAN FRANCISCO (AP) -- They just don't make cable cars like they
+                         used to -- except, of course, in San Francisco.
+                         </P>
+                         <P>
+                            Working from dog-eared blueprints and plans kept only in their
+                         heads, four carpenters spent 3,000 hours making a brand-new cable
+                         car that's set to hit the rails Monday.
+                         </P>
+                         <P>
+                            The new, green and white No. 9 car was crafted by hand, from its
+                         bronze-alloy bell to its Alaskan cedar roof. It will carry its
+                         first passengers exactly 100 years after the death of the father of
+                         cable cars, Andrew Hallidie.
+                         </P>
+                         <P>
+                            One hundred also is the car's life expectancy because the San
+                         Francisco cable cars are so solid, made almost entirely of oak, and
+                         are so painstakingly maintained.
+                         </P>
+                         <P>
+                            ''I think the number one reason they last longer than street
+                         cars is that they're hand made,'' says 45-year-old Bob Harris, a
+                         carpenter who has crafted cable cars for 22 years. ''There's
+                         special care in everything. Plus, they have no motor parts to wear
+                         out.''
+                         </P>
+                         <P>
+                            San Francisco's first cable cars started wearing out in the
+                         1980s, and the Municipal Railway workshop has been crafting new
+                         ones just about every other year.
+                         </P>
+                         <P>
+                            According to the San Francisco Cable Car museum, Hallidie
+                         hatched upon the innovative idea of making street cars that grab
+                         constantly moving underground cables for power after seeing a
+                         horse-drawn streetcar accident in 1869 in which five horses were
+                         killed.
+                         </P>
+                         <P>
+                            In the following years, cable car systems bloomed in cities all
+                         over the world, only to be eclipsed in the 1940s by electrical
+                         street cars, subways and buses. While San Francisco's routes shrank
+                         to just two -- crisscrossing the hilly city on the California and
+                         Powell lines -- the cable car and its clanging bell has become a
+                         city landmark.
+                         </P>
+                         <P>
+                            Locals tend to shy away from the cable cars since the admission
+                         price is double that of buses, but tourists line up by the hundreds
+                         for the thrill of hanging perilously off a lurching, old-fashioned
+                         machine.
+                         </P>
+                         <P>
+                            According to legend, the original blueprints were destroyed in
+                         the fires that followed the 1906 earthquake, and since then
+                         craftsmen have been drawing up patterns on the fly and passing the
+                         craft down through the generations.
+                         </P>
+                         <P>
+                            ''We have bits and pieces of plans, but a lot of it is just in
+                         the carpenters' heads,'' says Harris. ''It's like putting a puzzle
+                         back together. That's what I really like about working here, it's
+                         such a challenge.''
+                         </P>
+                         <P>
+                            Each 7-ton car costs about $275,000. Constant maintenance is
+                         needed to replace the wooden brake shoes and grips that grab the
+                         underground cable, which moves at a constant speed of 9 mph. Both
+                         the shoes and grips are crafted at the Municipal Railway workshop
+                         and must be replaced every three days.
+                         </P>
                 </div>
                 
                 <button type="button" class="btn btn-primary" onclick="relevant();draw();screenshot2();redirect('../index.html');">Relevant</button>
