--- a/436/436_2.html
+++ b/436/436_2.html
@@ -48,28 +48,273 @@
                 
                 <h1>Topic: "Railway Accidents" </h1>
                 <div>
-                    <h2> Chinese Surgeon Draws "Road Map" For the Brain </h2>
+                    <h2> GUN MAKERS' APPROACH TO BASIC SAFETY FEATURE VARIES WIDELY </h2>
 
-<P>
-HARBIN, November 21 (Xinhua) -- The workings of the human brain
-remains a mystery. The brain is often described as a "virgin
-forest" because of its complexity.
-</P>
-<P>
-A "road map" for the brain devised by a Chinese surgeon will
-serve as a guide for doctors performing cerebral operations. Brain
-surgeons often use an endoscope with a micro-video camera or other
-medical instruments to help explore the human brain during
-operations.
-</P>
-<P>
-Doctor Han Zhanqiang works at the No.1 Hospital Attached to
-Harbin Medical Sciences University in the northeast province of
-Heilongjiang. The slender, tubular optical instrument can enter
-the brain via "three routes". These "three routes" have been
-carefully marked by Dr. Han to guide other doctors when examining
-the brain. 
-</P>
+                    <P>
+                            It is one of most common gun accidents: A person picks up a
+                         semiautomatic pistol, takes out the magazine containing the
+                         cartridges and, thinking the weapon is empty, squeezes the trigger
+                         and shoots himself or someone else.
+                         </P>
+                         <P>
+                            When a semiautomatic's magazine is removed, a round can remain
+                         in the chamber, ready to be fired, and scores of people, from
+                         adults cleaning guns to children playing with them, have died or
+                         been seriously hurt in recent years as a result.
+                         </P>
+                         <P>
+                            Gun producers have long known of the danger, and some have
+                         responded by building into their guns an inexpensive mechanism
+                         known as a magazine safety. But the fact that many gun makers have
+                         chosen not to use simple devices like magazine safeties and gun
+                         locks is now a focus of a growing wave of lawsuits in which cities
+                         are accusing the firearms industry of making guns needlessly
+                         dangerous.
+                         </P>
+                         <P>
+                            A look at how gun makers have chosen to use, or not use, the
+                         magazine safety provides a glimpse into an industry driven by
+                         unique marketing forces. In the absence of government safety
+                         regulation, different companies set their own standards, and
+                         producers have not sought independent answers about safety issues
+                         or been able to reach internal consensus on them.
+                         </P>
+                         <P>
+                            For decades, the nation's biggest gun maker, Smith &AMP; Wesson, has
+                         incorporated a magazine safety, a mechanism made of a few springs
+                         and a lever that can cost as little as 9 cents, in virtually every
+                         semiautomatic pistol it sold to the public. Other companies have
+                         never used one.
+                         </P>
+                         <P>
+                            Beretta uses the device in a few models but not others. Some
+                         manufacturers offer it as an option to law enforcement but not to
+                         the public. One manufacturer stamps a warning about the firing
+                         danger onto a pistol. Another puts a caution sticker on the
+                         magazine. Others say nothing on the gun.
+                         </P>
+                         <P>
+                            Gun makers have a simple response to questions about the
+                         magazine safety, as well as the safety lawsuits: People know that
+                         guns are dangerous, gun owners need training, and they need to keep
+                         weapons away from children. Faced with the prospect of federal
+                         regulation, gun makers recently began to distribute safety locks,
+                         but both the industry and groups like the National Rifle
+                         Association oppose mandatory safety requirements.
+                         </P>
+                         <P>
+                            ``We leave it up to each individual company to manufacture what
+                         they think is the safest, highest quality product as they see fit
+                         and leave it to the consumer to buy the gun that best fits their
+                         needs,'' said Andrew Kelley, a spokesman for Sporting Arms and
+                         Ammunition Manufacturers Institute, a trade group in Newtown, Conn.
+                         </P>
+                         <P>
+                            For every gun maker that cites safety as a reason for using the
+                         magazine device, another contends it could make a gun less
+                         reliable. Other consumer industries form internal task forces to
+                         resolve such debates, or refer them to independent technical
+                         groups, such as Underwriters Laboratories Inc., which have set
+                         standards for products from children's pajamas to hair dryers.
+                         </P>
+                         <P>
+                            But while the gun industry's group, the Sporting Arms and
+                         Ammunition Institute, has set technical standards for bullets, it
+                         has not researched the value of internal safety devices like the
+                         magazine safety, Kelley said.
+                         </P>
+                         <P>
+                            There is little question that some accidental shooting deaths
+                         could be prevented if gun owners handled and stored their weapons
+                         more safely. And such deaths have fallen steadily over the last two
+                         decades.
+                         </P>
+                         <P>
+                            Still, in 1996, the most recent year for which federal data are
+                         available, 1,134 people were killed in such incidents, 135 of them
+                         children under 14.
+                         </P>
+                         <P>
+                            The shootings occur for various reasons. Many involve hunting.
+                         Others happen when a gun is dropped. But a 1991 study by the
+                         General Accounting Office, a congressional agency, found that
+                         nearly a fourth occurred because the person who picked up a gun
+                         thought it was unloaded.
+                         </P>
+                         <P>
+                            No single device _ and gun makers can choose from many _ can
+                         eliminate such shootings. But the gun industry's scattershot
+                         approach to safety involves producers of inexpensive and costly
+                         guns alike.
+                         </P>
+                         <P>
+                            For expensive pistols, the marketing chain often starts with
+                         military or police agencies. Gun makers can use their success in
+                         that arena to sell the same weapon to consumers.
+                         </P>
+                         <P>
+                            ``Whatever gun the cop carries, the civilian aspires to carry,''
+                         said Joseph Cartabona, director of handguns for Colt's
+                         Manufacturing in West Hartford, Conn.
+                         </P>
+                         <P>
+                            Many law-enforcement agencies, including the FBI, do not want a
+                         magazine safety. Their reasoning: that being able to fire the
+                         bullet remaining in the chamber could save the life of an officer
+                         who changes his magazine or accidentally releases it during a
+                         gunfight.
+                         </P>
+                         <P>
+                            But firearms experts who have looked for such cases say they
+                         have found few. Instead, experts like Massad Ayoob, a police
+                         captain who is director of the Lethal Force Institute, a training
+                         academy in Concord, N.H., say they have found more instances where
+                         officers with magazine safeties avoided being shot with their own
+                         guns by ejecting the magazine during a struggle.
+                         </P>
+                         <P>
+                            ``It acts as a kind of kill button,'' Ayoob said.
+                         </P>
+                         <ANNOTATION>
+                            (STORY CAN END HERE. OPTIONAL MATERIAL FOLLOWS)
+                         </ANNOTATION>
+                         <P>
+                            nn
+                         </P>
+                         <P>
+                            Between 1988 and 1997, 62 police officers nationwide were killed
+                         with their own weapons, according to the FBI.
+                         </P>
+                         <P>
+                            Beretta and Sig Arms do not normally put the safety in their
+                         pistols, but will if law-enforcement agencies want it. Neither
+                         company gives the public that option.
+                         </P>
+                         <P>
+                            ``There has been no commercial call for it or request for it,''
+                         said Wesley Lang, the vice president of marketing for Sig Arms,
+                         based in Exeter, N.H.
+                         </P>
+                         <P>
+                            Whatever the merits of the device for police work, guns stripped
+                         of safety features for military or police use are then sold to
+                         consumers, who often lack training. Such guns include
+                         semiautomatics made by Glock Inc., which are used by about half of
+                         the country's police departments.
+                         </P>
+                         <P>
+                            Glock pistols, designed in the early 1980s for the Austrian
+                         military, have also been a big hit with consumers, who now account
+                         for half of all sales. The Glock has several safety features, but
+                         lacks both a magazine safety and a manual safety, the lever found
+                         on many pistols that must be pushed for the gun to fire.
+                         </P>
+                         <P>
+                            Such mechanical factors combined with poor training may be
+                         behind many accidental deaths and injuries involving Glock pistols.
+                         In the last decade, about 60 accidental shooting lawsuits have been
+                         filed against Glock, of Smyrna, Ga., according to Firearms
+                         Litigation Clearinghouse, an advocacy group in Washington, and the
+                         company says it is facing about 20 such suits, 40 percent of which
+                         involve consumers.
+                         </P>
+                         <P>
+                            Glock denies any blame for the incidents and it has won all nine
+                         cases that have gone to trial, said the company's general counsel,
+                         Paul Jannuzzo. But it has settled other suits.
+                         </P>
+                         <P>
+                            ``The gun is the best tool of its kind available, be it for a
+                         policeman or a civilian,'' Jannuzzo said. ``It strikes the proper
+                         balance between safety and usability.''
+                         </P>
+                         <P>
+                            Only a few lawsuits specifically charging that an accidental
+                         shooting resulted from the lack of a magazine safety have gone to
+                         trial, and gun makers have won them. Several more are pending,
+                         including one involving the 1996 death of Ross Mathieu, the
+                         12-year-old boy in Massachusetts shot by a friend who thought a
+                         pistol without its magazine was empty.
+                         </P>
+                         <P>
+                            But in the last three decades, gun makers have quietly settled
+                         dozens of such cases, say plaintiffs' lawyers and expert witnesses
+                         who have testified for them. Stanton Berg, a firearms consultant in
+                         Minneapolis, said he had been involved in about 30 suits involving
+                         the lack of a magazine safety, nearly all of which were settled.
+                         </P>
+                         <P>
+                            Another firearms expert, Lama Martin, the president of Forensic
+                         Ballistics Inc., a consulting firm in Bel Air, Md., said he had
+                         been involved in about six cases that were settled. He said that
+                         any gun sold to the public should have at least three devices: a
+                         manual safety, a magazine safety and a safety to prevent the gun
+                         from firing if it is dropped.
+                         </P>
+                         <P>
+                            ``The average civilian has received no training,'' Martin said.
+                         ``He needs all the help he can get.''
+                         </P>
+                         <P>
+                            The settlements have not prompted the industry to use magazine
+                         safeties. Jeffrey Reh, general counsel of Beretta USA in Accokeek,
+                         Md., which has settled two of those cases, said the magazine safety
+                         has pros and cons.
+                         </P>
+                         <P>
+                            Reh said the safety can prevent someone from accidentally firing
+                         a gun that they think is unloaded because the magazine is removed.
+                         But deadly accidents have happened with guns that have the safety,
+                         he said, when someone inserted an empty magazine in the pistol.
+                         That disengages the safety and allows the remaining bullet to be
+                         fired.
+                         </P>
+                         <P>
+                            He also said that a homeowner needing a gun in a hurry for
+                         self-defense might not be able to use it if the gun had a safety
+                         and he fumbled with a magazine.
+                         </P>
+                         <P>
+                            ``It is what we call a neutral feature,'' Reh said.
+                         </P>
+                         <P>
+                            That does not explain why some Beretta guns sold to the public
+                         have magazine safeties and others do not. Reh said none of the guns
+                         made by Beretta in the United States have magazine safeties, but
+                         they are included in Berettas made by Fabbrica D'Armi Pietro
+                         Beretta, an Italian sister company.
+                         </P>
+                         <P>
+                            Reh said he did not know for certain why the Italian company
+                         used the device, but he said the reason might stem from a 1968
+                         federal law aimed at cheap handguns known as ``Saturday night
+                         specials,'' most of which came from abroad at the time.
+                         </P>
+                         <P>
+                            The 1968 law, the federal Gun Control Act, imposed a test based
+                         on safety features on imported handguns. But the test did not apply
+                         to guns made in the United States, and domestic producers quickly
+                         moved in to make inexpensive guns that did not meet the import
+                         test.
+                         </P>
+                         <P>
+                            In recent years, some gun makers have moved to make weapons less
+                         dangerous. But within the industry, currents can flow in several
+                         directions.
+                         </P>
+                         <P>
+                            For decades, virtually every Smith &AMP; Wesson pistol sold to the
+                         public had a magazine safety because the company believed it could
+                         help prevent accidental shootings, said Kenneth Jorgensen, a
+                         spokesman for the gun maker. But several years ago, faced with the
+                         popularity of the Glock, Smith &AMP; Wesson started selling a competing
+                         line of inexpensive pistols known as its ``Sigma'' series.
+                         </P>
+                         <P>
+                            The new pistol, like the Glock, does not have a magazine safety.
+                         Instead, it bears this warning stamped on the side: ``CAUTION:
+                         Capable of firing with the magazine removed.''
+                         </P>
                 </div>
                 
                 <button type="button" class="btn btn-primary" onclick="relevant();draw();screenshot2();redirect('436_3.html');">Relevant</button>
