--- a/436/436_6.html
+++ b/436/436_6.html
@@ -44,75 +44,36 @@
                 
                 <h1>Topic: "Railway Accidents" </h1>
                 <div>
-                    <h2> Electric Fields, Cancer Link Nixed </h2>
+                    <h2> 6 KILLED BY TRAIN WHILE SLEEPING ON TRACKS  </h2>
                     <P>
-                        WASHINGTON (AP) -- Six years of research have produced little  
-                    hard evidence that the magnetic fields around electric power lines 
-                    cause cancer, yet some lingering concerns remain, a National 
-                    Institutes of Health division reported Tuesday. 
-                    </P>
-                    <P>
-                        ``Virtually all of the laboratory evidence in animals and humans  
-                    and most of the mechanistic studies in cells fail to support a 
-                    causal relationship'' between the electromagnetic fields and 
-                    cancer, the National Institute of Environmental Health Sciences 
-                    said in the report to Congress. 
-                    </P>
-                    <P>
-                        However, it said there have been some statistical associations  
-                    between the fields and childhood leukemia as well as chronic 
-                    lymphocytic leukemia in adults exposed to the fields through their 
-                    work, such as electric utility workers, machinists and welders. 
-                    </P>
-                    <P>
-                        Research is continuing on these ``lingering concerns'' and  
-                    efforts to reduce human exposure to electromagnetic fields should 
-                    continue, the report said. 
-                    </P>
-                    <P>
-                        ``The lack of consistent, positive findings in animal or  
-                    mechanistic studies weakens the belief that this association is 
-                    actually due to EMF, but it cannot completely discount the 
-                    epidemiological findings,'' NIEHS Director Kenneth Olden said in a 
-                    statement. 
-                    </P>
-                    <P>
-                        Therefore, he said, since virtually everyone in the country is  
-                    routinely exposed to EMF, efforts to reduce such exposure should 
-                    continue. 
-                    </P>
-                    <P>
-                        For example, the electrical industry should continue efforts to  
-                    reduce the electromagnetic fields around large transmission lines 
-                    and communities should enforce electrical codes to avoid wiring 
-                    errors that can increase EMF. 
-                    </P>
-                    <P>
-                        The focus on a possible link to cancer stemmed from a 1979  
-                    Denver study that tied leukemia to EMF, but the researchers also 
-                    concluded that there was no connection between EMF and other 
-                    problems including Alzheimer's disease, depression and birth 
-                    defects. 
-                    </P>
-                    <P>
-                        Just a year ago, a panel of scientists studying this issue  
-                    concluded, in a 19-9 vote, that electromagnetic fields should be 
-                    considered ``possible human carcinogens'' though the risk was 
-                    ``probably quite small.'' 
-                    </P>
-                    <P>
-                        That was at odds with a 1996 report by a National Research  
-                    Council panel of scientists.Those scientists evaluated about 500 
-                    studies on the health effects of high voltage power lines and found 
-                    ``no conclusive and consistent evidence'' that electric and 
-                    magnetic fields cause any human disease. 
-                    </P>
-                    <P>
-                        Though the link between electricity and disease has long been  
-                    controversial, some consumer groups have sued power companies or 
-                    forced utility firms to move power lines or install shielding. 
-
-                    </P>
+                            The train, which was carrying a variety of freight like scrap
+                         paper and metal automobile parts, was traveling from Houston to
+                         Brownsville, Texas, when the accident occurred about 3:15 a.m. near
+                         the tiny town of Norias, which is 60 miles north of Brownsville.
+                         </P>
+                         <P>
+                            Last year in Texas there were 38 fatalities and 80 injuries
+                         involving what railroad officials call ``trespass accidents,''
+                         Davis said, cases where people were struck on or near tracks or
+                         trying to get on a railroad car.
+                         </P>
+                         <P>
+                            Borrego said the last time he could remember a large group of
+                         illegal immigrants being killed on train tracks was in 1983 or 1984
+                         when 14 people were killed trying to cross a railroad trestle.
+                         </P>
+                         <P>
+                            Border Patrol officials along with Union Pacific officials
+                         caution illegal immigrants about sleeping on railroad tracks as
+                         part of general information they provide on the dangers of crossing
+                         the border.
+                         </P>
+                         <P>
+                            ``Sometimes they don't get the word,'' Borrego said. ``The
+                         conditions out here are rigid. You've got cactus, mesquite. It's no
+                         fun walking through the territory. They run out of water, they get
+                         bit by snakes.''
+                         </P>
                 </div>
                 
                 <button type="button" class="btn btn-primary" onclick="relevant();draw();screenshot2();redirect('436_7.html');">Relevant</button>
