--- a/436/436_7.html
+++ b/436/436_7.html
@@ -44,75 +44,112 @@
                 
                 <h1>Topic: "Railway Accidents" </h1>
                 <div>
-                    <h2> Electric Fields, Cancer Link Nixed </h2>
+                    <h2> AP Top News at 10 p.m. EDT </h2>
                     <P>
-                        WASHINGTON (AP) -- Six years of research have produced little  
-                    hard evidence that the magnetic fields around electric power lines 
-                    cause cancer, yet some lingering concerns remain, a National 
-                    Institutes of Health division reported Tuesday. 
-                    </P>
-                    <P>
-                        ``Virtually all of the laboratory evidence in animals and humans  
-                    and most of the mechanistic studies in cells fail to support a 
-                    causal relationship'' between the electromagnetic fields and 
-                    cancer, the National Institute of Environmental Health Sciences 
-                    said in the report to Congress. 
-                    </P>
-                    <P>
-                        However, it said there have been some statistical associations  
-                    between the fields and childhood leukemia as well as chronic 
-                    lymphocytic leukemia in adults exposed to the fields through their 
-                    work, such as electric utility workers, machinists and welders. 
-                    </P>
-                    <P>
-                        Research is continuing on these ``lingering concerns'' and  
-                    efforts to reduce human exposure to electromagnetic fields should 
-                    continue, the report said. 
-                    </P>
-                    <P>
-                        ``The lack of consistent, positive findings in animal or  
-                    mechanistic studies weakens the belief that this association is 
-                    actually due to EMF, but it cannot completely discount the 
-                    epidemiological findings,'' NIEHS Director Kenneth Olden said in a 
-                    statement. 
-                    </P>
-                    <P>
-                        Therefore, he said, since virtually everyone in the country is  
-                    routinely exposed to EMF, efforts to reduce such exposure should 
-                    continue. 
-                    </P>
-                    <P>
-                        For example, the electrical industry should continue efforts to  
-                    reduce the electromagnetic fields around large transmission lines 
-                    and communities should enforce electrical codes to avoid wiring 
-                    errors that can increase EMF. 
-                    </P>
-                    <P>
-                        The focus on a possible link to cancer stemmed from a 1979  
-                    Denver study that tied leukemia to EMF, but the researchers also 
-                    concluded that there was no connection between EMF and other 
-                    problems including Alzheimer's disease, depression and birth 
-                    defects. 
-                    </P>
-                    <P>
-                        Just a year ago, a panel of scientists studying this issue  
-                    concluded, in a 19-9 vote, that electromagnetic fields should be 
-                    considered ``possible human carcinogens'' though the risk was 
-                    ``probably quite small.'' 
-                    </P>
-                    <P>
-                        That was at odds with a 1996 report by a National Research  
-                    Council panel of scientists.Those scientists evaluated about 500 
-                    studies on the health effects of high voltage power lines and found 
-                    ``no conclusive and consistent evidence'' that electric and 
-                    magnetic fields cause any human disease. 
-                    </P>
-                    <P>
-                        Though the link between electricity and disease has long been  
-                    controversial, some consumer groups have sued power companies or 
-                    forced utility firms to move power lines or install shielding. 
-
-                    </P>
+                            WASHINGTON (AP) -- President Clinton is standing back and leaving decisions
+                         in the Elian Gonzalez custody case to Attorney General Janet Reno. ''The
+                         attorney general is leading the effort,'' presidential spokesman Joe Lockhart
+                         said. Clinton said today that the boy should be promptly reunited with his
+                         father, now that a federal court has ruled that Elian must stay in the United
+                         States until the court decides whether he should get an asylum hearing. A
+                         hearing was set for May 11.
+                         </P>
+                         <P>
+                         South Korean Wartime Killings Documented
+                         </P>
+                         <P>
+                            DOKCHON, South Korea (AP) -- South Korean soldiers and police, observed at
+                         times by U.S. Army officers, executed more than 2,000 political prisoners
+                         without trial in the early weeks of the Korean War, according to declassified
+                         U.S. military documents and witnesses. Supreme commander Gen. Douglas MacArthur
+                         became aware of at least one of the mass shootings, according to documents
+                         originally classified ''top secret.'' The new information, detailed in reporting
+                         by The Associated Press and a Korean researcher, substantiates what some
+                         historians have long believed: Large numbers of South Korean leftists arrested
+                         by the right-wing regime were secretly killed.
+                         </P>
+                         <P>
+                         Service Marks Columbine Anniversary
+                         </P>
+                         <P>
+                            LITTLETON, Colo. (AP) -- Coloradans fell silent while a church bell tolled 13
+                         times in memory of the first anniversary of the nation's deadliest school
+                         shooting. The bell tolled 13 times at 11:21 a.m. today, the precise moment two
+                         teen-agers opened fire in Columbine High School on April 20, 1999. At private
+                         ceremonies and public remembrances all day and into the night today, students,
+                         staff, survivors and strangers came together to mark the moment that Dylan
+                         Klebold and Eric Harris began the bloodbath, killing 12 students and a teacher
+                         and wounding 26 before taking their own lives.
+                         </P>
+                         <P>
+                         Ex-Cops Sentenced in Alcohol Killing
+                         </P>
+                         <P>
+                            MEXICO CITY (AP) -- Six former Mexico City policemen convicted of the robbery
+                         and murder by alcohol poisoning of an American student have been sentenced to up
+                         to 98 years in prison. Frederick McPhail, 27, was found in his parked car
+                         Chapultepec Park in Mexico City in November 1998. For their roles in the death,
+                         Francisco Leon Gonzalez received 99 years in prison and Lucio Tapia Galindo
+                         received 85 years, the daily newspaper Reforma reported Thursday. The two were
+                         active police officers at the time of the crime. Their four accomplices had
+                         retired from the force when McPhail died. Three of them received sentences of 79
+                         years, while a fourth received 68 years, Reforma said.
+                         </P>
+                         <P>
+                         Survey: Overweight Need More Exercise
+                         </P>
+                         <P>
+                            ATLANTA (AP) -- The vast majority of overweight adults trying to shed pounds
+                         aren't getting enough exercise, the government said today. A 1998 national
+                         survey by the Centers for Disease Control and Prevention found that 53.8 percent
+                         of American adults reported being overweight and that half of them were trying
+                         to lose weight. Most of those trying to lose weight -- 62.7 percent -- were
+                         exercising, but only 28 percent said they exercised 30 minutes a day at least
+                         five days a week, the minimum government recommendation.
+                         </P>
+                         <P>
+                         Zimbabwe White-Owned Farms Rampaged
+                         </P>
+                         <P>
+                            HARARE, Zimbabwe (AP) -- Nearly 200 attackers rampaged through a white-owned
+                         farm Thursday in northern Zimbabwe, beating dogs to death and burning down
+                         workers' homes a day after a leader of the farm occupations promised to end
+                         hostilities. The attack was the latest violence by armed squatters who have
+                         occupied nearly 1,000 white-owned farms across Zimbabwe over the past two
+                         months. In the past week, two farmers have been killed, six others have been
+                         abducted and beaten, and several farmhouses set ablaze.
+                         </P>
+                         <P>
+                         Reports: Boat Sinks in Nigeria
+                         </P>
+                         <P>
+                            LAGOS, Nigeria (AP) -- Dozens of passengers were missing and feared dead
+                         after an overcrowded boat carrying up to 500 villagers sank in a Nigerian river,
+                         according to news reports Friday. The accident occurred Wednesday night on the
+                         Nembe River near Port Harcourt, about 210 miles southeast of Lagos, the Lagos
+                         Comet reported. The 500 passengers was more than double the boat's capacity of
+                         200 passengers. The cause of the accident was unclear.
+                         </P>
+                         <P>
+                         Tokyo Stocks Rise
+                         </P>
+                         <P>
+                            TOKYO (AP) -- Tokyo stocks rose early Friday following a jump in the Dow
+                         Jones industrial average on Wall Street. The Nikkei gained 308.93 points to
+                         19,268.25 points in early trading. On Thursday, the average closed down 127.30
+                         points, or 0.67 percent. In New York, Dow Jones industrial average rose 169.09
+                         to close at 10,844.05.
+                         </P>
+                         <P>
+                         Raptors Coach Mum on Camby Comments
+                         </P>
+                         <P>
+                            LAKE BUENA VISTA, Fla. (AP) -- Toronto Raptors coach Butch Carter tried not
+                         to respond today to being called ''a liar'' by New York Knicks forward Marcus
+                         Camby. ''I think I'll maintain my new Canadian manners and turn the other
+                         cheek,'' Carter said. Carter and Camby will face each other when the
+                         Raptors-Knicks first-round playoff series begins Sunday at New York.
+                         </P>
                 </div>
                 
                 <button type="button" class="btn btn-primary" onclick="relevant();draw();screenshot2();redirect('436_8.html');">Relevant</button>
