--- a/436/436_8.html
+++ b/436/436_8.html
@@ -44,75 +44,99 @@
                 
                 <h1>Topic: "Railway Accidents" </h1>
                 <div>
-                    <h2> Electric Fields, Cancer Link Nixed </h2>
+                    <h2> 6 KILLED BY TRAIN WHILE SLEEPING ON TRACKS </h2>
                     <P>
-                        WASHINGTON (AP) -- Six years of research have produced little  
-                    hard evidence that the magnetic fields around electric power lines 
-                    cause cancer, yet some lingering concerns remain, a National 
-                    Institutes of Health division reported Tuesday. 
-                    </P>
-                    <P>
-                        ``Virtually all of the laboratory evidence in animals and humans  
-                    and most of the mechanistic studies in cells fail to support a 
-                    causal relationship'' between the electromagnetic fields and 
-                    cancer, the National Institute of Environmental Health Sciences 
-                    said in the report to Congress. 
-                    </P>
-                    <P>
-                        However, it said there have been some statistical associations  
-                    between the fields and childhood leukemia as well as chronic 
-                    lymphocytic leukemia in adults exposed to the fields through their 
-                    work, such as electric utility workers, machinists and welders. 
-                    </P>
-                    <P>
-                        Research is continuing on these ``lingering concerns'' and  
-                    efforts to reduce human exposure to electromagnetic fields should 
-                    continue, the report said. 
-                    </P>
-                    <P>
-                        ``The lack of consistent, positive findings in animal or  
-                    mechanistic studies weakens the belief that this association is 
-                    actually due to EMF, but it cannot completely discount the 
-                    epidemiological findings,'' NIEHS Director Kenneth Olden said in a 
-                    statement. 
-                    </P>
-                    <P>
-                        Therefore, he said, since virtually everyone in the country is  
-                    routinely exposed to EMF, efforts to reduce such exposure should 
-                    continue. 
-                    </P>
-                    <P>
-                        For example, the electrical industry should continue efforts to  
-                    reduce the electromagnetic fields around large transmission lines 
-                    and communities should enforce electrical codes to avoid wiring 
-                    errors that can increase EMF. 
-                    </P>
-                    <P>
-                        The focus on a possible link to cancer stemmed from a 1979  
-                    Denver study that tied leukemia to EMF, but the researchers also 
-                    concluded that there was no connection between EMF and other 
-                    problems including Alzheimer's disease, depression and birth 
-                    defects. 
-                    </P>
-                    <P>
-                        Just a year ago, a panel of scientists studying this issue  
-                    concluded, in a 19-9 vote, that electromagnetic fields should be 
-                    considered ``possible human carcinogens'' though the risk was 
-                    ``probably quite small.'' 
-                    </P>
-                    <P>
-                        That was at odds with a 1996 report by a National Research  
-                    Council panel of scientists.Those scientists evaluated about 500 
-                    studies on the health effects of high voltage power lines and found 
-                    ``no conclusive and consistent evidence'' that electric and 
-                    magnetic fields cause any human disease. 
-                    </P>
-                    <P>
-                        Though the link between electricity and disease has long been  
-                    controversial, some consumer groups have sued power companies or 
-                    forced utility firms to move power lines or install shielding. 
-
-                    </P>
+                            HOUSTON _ Six people believed to be illegal immigrants from
+                         Mexico were hit and killed early Monday by a freight train as they
+                         slept on a desolate stretch of tracks in southern Texas. Officials
+                         said they believed the immigrants may have been victims of a
+                         superstition that the rails would keep them safe from snakes.
+                         </P>
+                         <P>
+                            ``There's a myth that if you sleep between the rails that snakes
+                         will not get you,'' said Mark Davis, a spokesman for Union Pacific.
+                         ``You go down the railroad tracks, you'll see snakes cut in half.''
+                         </P>
+                         <P>
+                            Davis said the driver of the train blew the whistle repeatedly
+                         when he noticed the people on the tracks. Although a couple of the
+                         victims raised their heads, no one got off the tracks. Davis said
+                         he was uncertain how far the train was from the victims when the
+                         driver saw them. But, he added, it would have taken a mile to stop
+                         the 105-car train, which was traveling between 45 and 49 miles an
+                         hour.
+                         </P>
+                         <P>
+                            The vast ranchlands of South Texas that stretch between the Rio
+                         Grande and San Antonio are among the most remote in the state, mile
+                         after mile of mesquite, prickly pear, citrus farms and grazing
+                         lands that are a prime avenue for illegal immigrants trying to make
+                         their way from the Mexican border to San Antonio or Houston.
+                         </P>
+                         <P>
+                            While illegal immigrants have been killed while sleeping on
+                         railroad tracks before, Fred Borrego, patrol agent in charge of the
+                         U.S. Border Patrol in Kingsville, said never had so many been
+                         killed in one accident. Between 2,000 and 3,000 illegal immigrants
+                         pass through his 2,600-square-mile patrol area each month, he said.
+                         </P>
+                         <P>
+                            The most recent victims, who were badly mutilated, have not been
+                         identified. They were taken to Corpus Christi where authorities
+                         will try to use fingerprints to determine their identity.
+                         </P>
+                         <P>
+                            Borrego had another possible explanation for the accident.
+                         </P>
+                         <P>
+                            ``Another theory I've been told is that in Mexico the trains
+                         don't run at night,'' Borrego said. ``They say they sleep up there
+                         because they feel a lot safer.''
+                         </P>
+                         <P>
+                            Although it seems implausible that people could sleep with the
+                         noise of a train running toward them, Davis said, ``a train
+                         operating when you're in front of it is very, very quiet.''
+                         </P>
+                         <P>
+                            The engine noise is primarily to the side, he said, and there is
+                         very little friction on the rail itself.
+                         </P>
+                         <P>
+                            ``I know its hard to believe,'' Borrego said. ``I've experienced
+                         this myself. If it's coming toward you it's as quiet as a cat.''
+                         </P>
+                         <P>
+                            But officials in the Kenedy County sheriff's office speculated
+                         that the hard traveling conditions confronted by the immigrants
+                         could also have played a role. The terrain in the area is very
+                         rugged, with most of it being brush covered.
+                         </P>
+                         <P>
+                            ``You think, `I'd never fall asleep there' or `Why wouldn't they
+                         wake up?''' said Hopy Alines, a secretary in the sheriff's office.
+                         ``But it just doesn't happen. These people travel three, four and
+                         five days without eating, without sleeping. They're just completely
+                         exhausted and they don't wake up.''
+                         </P>
+                         <P>
+                            Generally the illegal immigrants traveling through the county go
+                         unnoticed aside from the trail of odds and ends they leave behind,
+                         Ms. Alise said. ``You'll see empty bottles, sometimes bags of
+                         clothes,'' she said. ``We get a lot of calls where they break in
+                         and all they ever take is food and water.'' It is generally when
+                         people get sick or have problems that officials hear stories like
+                         the ones about people sleeping on the tracks.
+                         </P>
+                         <P>
+                            Davis estimated that four to six people a year are injured or
+                         killed while sleeping on railroad tracks. In fact, he said, there
+                         have been cases where people sleeping on tracks have been run over
+                         and survived.
+                         </P>
+                         <P>
+                            ``Unfortunately, or fortunately, they're intoxicated,'' he said.
+                         </P>
                 </div>
                 
                 <button type="button" class="btn btn-primary" onclick="relevant();draw();screenshot2();redirect('436_9.html');">Relevant</button>
