--- a/436/436_5.html
+++ b/436/436_5.html
@@ -44,75 +44,97 @@
                 
                 <h1>Topic: "Railway Accidents" </h1>
                 <div>
-                    <h2> Electric Fields, Cancer Link Nixed </h2>
+                    <h2> THOUSANDS ARE DELAYED AS CONRAIL FREIGHT TRAIN DERAILS </h2>
                     <P>
-                        WASHINGTON (AP) -- Six years of research have produced little  
-                    hard evidence that the magnetic fields around electric power lines 
-                    cause cancer, yet some lingering concerns remain, a National 
-                    Institutes of Health division reported Tuesday. 
-                    </P>
-                    <P>
-                        ``Virtually all of the laboratory evidence in animals and humans  
-                    and most of the mechanistic studies in cells fail to support a 
-                    causal relationship'' between the electromagnetic fields and 
-                    cancer, the National Institute of Environmental Health Sciences 
-                    said in the report to Congress. 
-                    </P>
-                    <P>
-                        However, it said there have been some statistical associations  
-                    between the fields and childhood leukemia as well as chronic 
-                    lymphocytic leukemia in adults exposed to the fields through their 
-                    work, such as electric utility workers, machinists and welders. 
-                    </P>
-                    <P>
-                        Research is continuing on these ``lingering concerns'' and  
-                    efforts to reduce human exposure to electromagnetic fields should 
-                    continue, the report said. 
-                    </P>
-                    <P>
-                        ``The lack of consistent, positive findings in animal or  
-                    mechanistic studies weakens the belief that this association is 
-                    actually due to EMF, but it cannot completely discount the 
-                    epidemiological findings,'' NIEHS Director Kenneth Olden said in a 
-                    statement. 
-                    </P>
-                    <P>
-                        Therefore, he said, since virtually everyone in the country is  
-                    routinely exposed to EMF, efforts to reduce such exposure should 
-                    continue. 
-                    </P>
-                    <P>
-                        For example, the electrical industry should continue efforts to  
-                    reduce the electromagnetic fields around large transmission lines 
-                    and communities should enforce electrical codes to avoid wiring 
-                    errors that can increase EMF. 
-                    </P>
-                    <P>
-                        The focus on a possible link to cancer stemmed from a 1979  
-                    Denver study that tied leukemia to EMF, but the researchers also 
-                    concluded that there was no connection between EMF and other 
-                    problems including Alzheimer's disease, depression and birth 
-                    defects. 
-                    </P>
-                    <P>
-                        Just a year ago, a panel of scientists studying this issue  
-                    concluded, in a 19-9 vote, that electromagnetic fields should be 
-                    considered ``possible human carcinogens'' though the risk was 
-                    ``probably quite small.'' 
-                    </P>
-                    <P>
-                        That was at odds with a 1996 report by a National Research  
-                    Council panel of scientists.Those scientists evaluated about 500 
-                    studies on the health effects of high voltage power lines and found 
-                    ``no conclusive and consistent evidence'' that electric and 
-                    magnetic fields cause any human disease. 
-                    </P>
-                    <P>
-                        Though the link between electricity and disease has long been  
-                    controversial, some consumer groups have sued power companies or 
-                    forced utility firms to move power lines or install shielding. 
-
-                    </P>
+                            NEW YORK _ A double-decker car on a Conrail freight train
+                         slammed into a railway overpass in the Bronx early Friday, causing
+                         a derailment that severely disrupted service on the Hudson line of
+                         the Metro-North commuter railway for much of the day and left
+                         thousands of commuters scrambling to get to work.
+                         </P>
+                         <P>
+                            Conrail officials acknowledged that the freight train should not
+                         have been loaded with a double-decker car on that rail line, and
+                         the accident underscored how any disruption on the heavily
+                         overburdened rail lines can affect the whole system.
+                         </P>
+                         <P>
+                            Although no one was injured in the accident, which involved a
+                         125-car Conrail freight train traveling into New York City from
+                         Albany, it hobbled train service not only on the Hudson line but
+                         also on the Harlem and New Haven lines, whose tracks were
+                         temporarily closed because of the derailment.
+                         </P>
+                         <P>
+                            ``I couldn't get to work at the usual time,'' said Nadine C.
+                         Johnson, a Manhattan lawyer who lives in Ossining, N.Y., and was
+                         forced with hundreds of other riders on the Hudson line to get off
+                         her train in the Bronx and transfer for a long subway ride into
+                         midtown.
+                         </P>
+                         <P>
+                            ``I considered not going at all,'' she said. And after being
+                         ``really rattled'' by a radio report that commuters might find no
+                         service when they wanted to return home from Manhattan, she said
+                         she was relieved to find that delays were the worst she would face
+                         in her commute.
+                         </P>
+                         <P>
+                            Long delays continued into the evening for passengers on the
+                         Hudson line, which the freight train was using when it derailed,
+                         scattering twisted pieces of metal and other debris on the sidings
+                         near River Avenue and 153rd Street.
+                         </P>
+                         <P>
+                            Metro-North spokeswoman Marjorie Anders said service on all its
+                         lines would resume normal weekend schedules Saturday, and was
+                         expected to be running normally for weekday commuters on Monday.
+                         </P>
+                         <ANNOTATION>
+                            (STORY CAN END HERE. OPTIONAL MATERIAL FOLLOWS)
+                         </ANNOTATION>
+                         <P>
+                            The delays Friday angered and frustrated riders from Stamford,
+                         Conn., to Poughkeepsie, N.Y., but also gave many an excuse to
+                         extend their weekend, or at least prepare for it.
+                         </P>
+                         <P>
+                            ``It actually helped me,'' said Elizabeth Nolan of Tarrytown,
+                         N.Y., who works as an administrator at a Manhattan clothing
+                         company, and who said she heard of the derailment on the radio at
+                         5:30 a.m.
+                         </P>
+                         <P>
+                            She seized upon the opportunity to postpone her early morning
+                         commute, and stayed at home long enough to bake cookies and run
+                         errands before boarding a train that deposited her at the Marble
+                         Hill station, where she then transferred to a subway, at 9:30 a.m.
+                         </P>
+                         <P>
+                            ``I can leave Westchester with a clear mind,'' she said with a
+                         laugh.
+                         </P>
+                         <P>
+                            Far less sanguine, however, were senior officials of Conrail,
+                         Metro-North and the New York state Department of Transportation,
+                         for whom the accident provided a glaring example of the dangers
+                         inherent in an overburdened rail system.
+                         </P>
+                         <P>
+                            Ms. Anders said several government agencies, including the
+                         National Transportation Safety Board, were investigating the cause
+                         of the accident. ``This is a case where some poor soul simply put a
+                         car on that train that was too big to get under the overpass,'' she
+                         said.
+                         </P>
+                         <P>
+                            Responsibility for the freight train and the configuration of
+                         its cars rests with Conrail, which for decades has used portions of
+                         the track owned by Metro-North to haul freight on long trains that
+                         make their way in and out of the city, mainly to Albany and
+                         elsewhere in the country in the hours before dawn, when the tracks
+                         would otherwise be idle.
+                         </P>
                 </div>
                 
                 <button type="button" class="btn btn-primary" onclick="relevant();draw();screenshot2();redirect('436_6.html');">Relevant</button>
